--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,7 @@ body::before {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #533232;
+    background-color: #4a2727;
     position: sticky;
     top: 0;
     padding: 10px 20px;
@@ -108,7 +108,7 @@ body::before {
 }
 
 .search-form button:hover {
-    background-color: #9a3b3b;
+    background-color: #721818;
 }
 
 .search-form input[type="text"]::placeholder {
@@ -143,9 +143,9 @@ footer {
     background-size: cover;
     background-position: center;
     position: relative;
-    animation: slideUp 2s ease-out forwards;
+    /*animation: slideUp 2s ease-out forwards;*/
 }
-
+/*
 .image:nth-child(1) {
     animation-delay: 0s;
 }
@@ -164,7 +164,7 @@ footer {
 
 .image:nth-child(5) {
     animation-delay: 8s;
-}
+}*/
 
 @keyframes slideUp {
     0% {
@@ -282,3 +282,127 @@ footer {
         animation: slideUp 2s ease-out forwards;
     }
 }
+
+/* Image Overlay Fade */
+
+.container {
+    position: relative;
+    width: 100%;
+  }
+  
+  .image {
+    opacity: 1;
+    display: block;
+    width: 100%;
+    height: auto;
+    transition: 1s ease;
+    backface-visibility: hidden;
+  }
+  
+  .middle {
+    display: flex;
+    transition: 1s ease;
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    border-style: solid;
+    border-color: grey; 
+    border-radius: 10px; /* Adds slight rounding */
+    box-shadow: 0px 4px 8px #4a2727; /* Adds a subtle shadow around the box */
+    border-width: 1px;
+    border-radius: 0px;
+    width: 70%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    text-align: center;
+  }
+  
+  .container:hover .image {
+    opacity: 0.3;
+  }
+  
+  .container:hover .middle {
+    opacity: 1;
+  }
+  
+  .text {
+    background-color:#721818;
+    color: white;
+    font-size: 16px;
+    padding: 16px 32px;
+    line-height: 1.6;
+    letter-spacing: 0.05rem;
+    word-spacing: 0.1rem;
+  }
+
+  .text h2 {
+    text-transform: capitalize;
+    text-shadow:
+      1px 1px 1px rgb(49, 7, 120),
+      2px 2px 1px rgb(106, 4, 4);
+    text-align: center;
+    line-height: 2.5;
+  }
+
+  .text ul {
+    list-style-position: outside; /* Aligns list text close to the bullet */
+    margin-left: 20px; /* Adds indentation from the left */
+    padding-left: 0; /* Removes additional default padding from the left */
+    text-align: left;
+  }
+  
+  .text ul li {
+    margin-left: 10px; /* Slightly indents each list item from the bullet */
+  }
+
+  .text a:link {
+    color: #ff4747;
+  }
+
+  .text a:visited {
+    color: rgb(253, 190, 72);
+  }
+
+  .text a:hover, a:focus {
+    text-decoration: none;
+    color: beige;
+    transition: all 0.5s ease;
+  }
+
+
+
+  /* Invisible spacer */
+  .spacer {
+    height: 10rem;
+    background: none;
+  }
+
+    /* Scroll Button styling */
+    .scroll-button {
+        position: sticky;
+        bottom: 2rem;
+        left: 2rem;
+        display: inline-flex;
+        padding: 0.5rem;
+        background-color: #333;
+        border-radius: 0.5rem;
+        align-items: center;
+        justify-content: center;
+        text-decoration: none;
+        opacity: 0;
+        transition: opacity 0.3s ease;
+      }
+      
+      /* Trigger the button to appear after scrolling past the background image */
+      .spacer + .scroll-button {
+        opacity: 10%;
+      }
+
+      .material-symbols-outlined {
+        font-variation-settings:
+        'FILL' 0,
+        'wght' 400,
+        'GRAD' 0,
+        'opsz' 24
+      }
