--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,6 @@ html, body {
 }
 
 body {
-    font-family: Arial, sans-serif;
     overflow-y: scroll;
     background-image: linear-gradient(to right top, #da1414 50%, #eee 50%);
     background-size: 100% calc(100% - 100vh + 5px);
@@ -30,6 +29,7 @@ body::before {
     z-index: -1;
 }
 
+/* Nav Bar */
 .navbar {
     display: flex;
     justify-content: space-between;
@@ -47,7 +47,7 @@ body::before {
 }
 
 .logo {
-    width: 50px;
+    width:60px;
     height: auto;
 }
 
@@ -84,6 +84,7 @@ body::before {
     display: none;
 }
 
+/* Search Bar */
 .search-form {
     display: flex;
     align-items: center;
@@ -115,7 +116,6 @@ body::before {
     color: #999;
 }
 
-
 footer {
     background-color: #533232;
     color: white;
@@ -126,57 +126,165 @@ footer {
 
 
 
-/* Content styling */
-.content {
-    padding: 20px;
-}
-
-
-
-.image-wrapper {
-    width: 100%;
-}
-
-.image {
-    width: 100%;
-    height: auto;
-    background-size: cover;
-    background-position: center;
-    position: relative;
-    /*animation: slideUp 2s ease-out forwards;*/
-}
-/*
-.image:nth-child(1) {
-    animation-delay: 0s;
-}
-
-.image:nth-child(2) {
-    animation-delay: 2s;
-}
-
-.image:nth-child(3) {
-    animation-delay: 4s;
-}
-
-.image:nth-child(4) {
-    animation-delay: 6s;
-}
-
-.image:nth-child(5) {
-    animation-delay: 8s;
-}*/
-
-@keyframes slideUp {
-    0% {
-        transform: translateY(100%);
+/* Image Overlay Fade */
+@media (min-width: 601px) {
+    .container {
+        display: flex;
+        flex-direction: row;
+        position: relative;
+        width: 100%;
     }
-    100% {
-        transform: translateY(0);
+
+    .image {
+        flex: 1;
+        opacity: 1;
+        display: block;
+        width: 100%;
+        height: auto;
+        transition: 1s ease;
+        backface-visibility: hidden;
+        background-size: cover;
+        background-position: center;
+        position: relative;
+    }
+
+    .middle {
+        flex: 1;
+        display: flex;
+        transition: 1s ease;
+        opacity: 0;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        border-style: solid;
+        border-color: grey; 
+        border-radius: 10px; /* Adds slight rounding */
+        box-shadow: 0px 4px 8px #4a2727; /* Adds a subtle shadow around the box */
+        border-width: 1px;
+        border-radius: 0px;
+        width: 60%;
+        transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+        text-align: center;
+    }
+
+    .container:hover .image {
+        opacity: 0.3;
+    }
+
+    .container:hover .middle {
+        opacity: 1;
     }
 }
 
+.text {
+background-color:#721818;
+color: white;
+font-size: 16px;
+padding: 16px 32px;
+line-height: 1.6;
+letter-spacing: 0.05rem;
+word-spacing: 0.1rem;
+}
+
+.text h2 {
+text-transform: capitalize;
+text-shadow:
+    1px 1px 1px rgb(49, 7, 120),
+    2px 2px 1px rgb(106, 4, 4);
+text-align: center;
+line-height: 2.5;
+}
+
+.text ul {
+list-style-position: outside; /* Aligns list text close to the bullet */
+margin-left: 20px; /* Adds indentation from the left */
+padding-left: 0; /* Removes additional default padding from the left */
+text-align: left;
+}
+
+.text ul li {
+margin-left: 10px; /* Slightly indents each list item from the bullet */
+}
+
+.text a:link {
+color: #ff4747;
+}
+
+.text a:visited {
+color: rgb(253, 190, 72);
+}
+
+.text a:hover, a:focus {
+text-decoration: none;
+color: beige;
+transition: all 0.5s ease;
+}
+
+
+
+/* Invisible spacer */
+/*.spacer {
+height: 10rem;
+background: none;
+}
+
+/* Scroll Button styling */
+/*.scroll-button {
+    position: sticky;
+    bottom: 2rem;
+    left: 2rem;
+    display: inline-flex;
+    padding: 0.5rem;
+    background-color: white;
+    color: grey;
+    border-radius: 0.5rem;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    opacity: 1;
+    transition: opacity 0.3s ease;
+    }
+    
+    /* Trigger the button to appear after scrolling past the background image */
+    /*.spacer + .scroll-button {
+    opacity: 1;
+    }
+
+    .material-symbols-outlined {
+    font-variation-settings:
+    'FILL' 0,
+    'wght' 400,
+    'GRAD' 0,
+    'opsz' 24
+    }
+    
+    
 /* Mobile-specific Content Styling */
 @media (max-width: 600px) {
+
+    .container {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .middle {
+        opacity: 1;
+        position: sticky;
+        top: 50%;
+        left: 50%;
+        border-style: solid;
+        border-color: grey; 
+        border-radius: 10px; /* Adds slight rounding */
+        box-shadow: 0px 4px 8px #4a2727; /* Adds a subtle shadow around the box */
+        border-width: 1px;
+        border-radius: 0px;
+        width: 100%;
+        text-align: center;
+    }
+        
+
+
     /* Hide the normal nav-links on mobile */
     .nav-links {
         display: none;
@@ -268,141 +376,5 @@ footer {
         padding: 8px;
         width: 200px;
     }
-
-    .image-wrapper {
-        width: 100%;
-    }
     
-    .image {
-        width: 100%;
-        height: auto;
-        background-size: cover;
-        background-position: center;
-        position: relative;
-        animation: slideUp 2s ease-out forwards;
-    }
 }
-
-/* Image Overlay Fade */
-
-.container {
-    position: relative;
-    width: 100%;
-  }
-  
-  .image {
-    opacity: 1;
-    display: block;
-    width: 100%;
-    height: auto;
-    transition: 1s ease;
-    backface-visibility: hidden;
-  }
-  
-  .middle {
-    display: flex;
-    transition: 1s ease;
-    opacity: 0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    border-style: solid;
-    border-color: grey; 
-    border-radius: 10px; /* Adds slight rounding */
-    box-shadow: 0px 4px 8px #4a2727; /* Adds a subtle shadow around the box */
-    border-width: 1px;
-    border-radius: 0px;
-    width: 70%;
-    transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    text-align: center;
-  }
-  
-  .container:hover .image {
-    opacity: 0.3;
-  }
-  
-  .container:hover .middle {
-    opacity: 1;
-  }
-  
-  .text {
-    background-color:#721818;
-    color: white;
-    font-size: 16px;
-    padding: 16px 32px;
-    line-height: 1.6;
-    letter-spacing: 0.05rem;
-    word-spacing: 0.1rem;
-  }
-
-  .text h2 {
-    text-transform: capitalize;
-    text-shadow:
-      1px 1px 1px rgb(49, 7, 120),
-      2px 2px 1px rgb(106, 4, 4);
-    text-align: center;
-    line-height: 2.5;
-  }
-
-  .text ul {
-    list-style-position: outside; /* Aligns list text close to the bullet */
-    margin-left: 20px; /* Adds indentation from the left */
-    padding-left: 0; /* Removes additional default padding from the left */
-    text-align: left;
-  }
-  
-  .text ul li {
-    margin-left: 10px; /* Slightly indents each list item from the bullet */
-  }
-
-  .text a:link {
-    color: #ff4747;
-  }
-
-  .text a:visited {
-    color: rgb(253, 190, 72);
-  }
-
-  .text a:hover, a:focus {
-    text-decoration: none;
-    color: beige;
-    transition: all 0.5s ease;
-  }
-
-
-
-  /* Invisible spacer */
-  .spacer {
-    height: 10rem;
-    background: none;
-  }
-
-    /* Scroll Button styling */
-    .scroll-button {
-        position: sticky;
-        bottom: 2rem;
-        left: 2rem;
-        display: inline-flex;
-        padding: 0.5rem;
-        background-color: #333;
-        border-radius: 0.5rem;
-        align-items: center;
-        justify-content: center;
-        text-decoration: none;
-        opacity: 0;
-        transition: opacity 0.3s ease;
-      }
-      
-      /* Trigger the button to appear after scrolling past the background image */
-      .spacer + .scroll-button {
-        opacity: 10%;
-      }
-
-      .material-symbols-outlined {
-        font-variation-settings:
-        'FILL' 0,
-        'wght' 400,
-        'GRAD' 0,
-        'opsz' 24
-      }
