--- a/styles.css
+++ b/styles.css
@@ -105,8 +105,9 @@ html, body {
 }
 
 
-/* Image Overlay Fade */
 @media (min-width: 601px) {
+
+    /* Image Overlay Fade for large screens */
     .container {
         display: flex;
         flex-direction: row;
@@ -137,8 +138,8 @@ html, body {
         left: 50%;
         border-style: solid;
         border-color: grey; 
-        border-radius: 10px; /* Adds slight rounding */
-        box-shadow: 0px 4px 8px #4a2727; /* Adds a subtle shadow around the box */
+        border-radius: 10px; 
+        box-shadow: 0px 4px 8px #4a2727;
         border-width: 1px;
         border-radius: 0px;
         width: 60%;
@@ -154,7 +155,8 @@ html, body {
     .container:hover .middle {
         opacity: 1;
     }
-    
+
+    /* Footer for larger screens */
     footer {
         display: flex;
         flex-direction: row;
@@ -190,28 +192,26 @@ html, body {
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: space-evenly;
-        width: 75%;
+        width: 45%;
         margin-bottom: 20px;
     }
-    
-    
+
     .footer-content ul {
         list-style-type: none;
         padding: 0;
     }
     
-    .footer-content ul li a,
-    .footer-content div a {
+    .footer-content ul li a {
         color: white;
         transition: color 0.3s;
     }
     
     .footer-content ul li a:hover,
-    .footer-content div a:hover {
+    .footer-content ul li a:focus{
         color: #ddd;
         text-decoration: none;
     }
-    
+
     .footer-bottom p {
         font-size: 0.9em;
         color: #ddd;
@@ -219,34 +219,35 @@ html, body {
 }
 
 /* Centered Newsletter and Footer Bottom */
-    .newsletter, .footer-bottom {
-        width: 100%;
-        max-width: 600px;
-        text-align: center;
-        margin-bottom: 10px;
-    }
-    
-    .newsletter input[type="email"] {
-        padding: 8px;
-        border-radius: 4px;
-        border: none;
-        margin-right: 5px;
-    }
-    
-    button {
-        padding: 8px 15px;
-        border-radius: 4px;
-        background-color: #ffffff;
-        color: #533232;
-        border: none;
-        cursor: pointer;
-        transition: background-color 0.3s;
-    }
-    
-    button:hover {
-        background-color: #ddd;
-    }
+.newsletter, .footer-bottom {
+    width: 100%;
+    max-width: 600px;
+    text-align: center;
+    margin-bottom: 10px;
+}
 
+.newsletter input[type="email"] {
+    padding: 8px;
+    border-radius: 4px;
+    border: none;
+    margin-right: 5px;
+}
+
+button {
+    padding: 8px 15px;
+    border-radius: 4px;
+    background-color: #ffffff;
+    color: #533232;
+    border: none;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+button:hover {
+    background-color: #ddd;
+}
+
+/* Main Content Text Styling */
 .text {
 background-color:#721818;
 color: white;
@@ -267,14 +268,14 @@ line-height: 2.5;
 }
 
 .text ul {
-list-style-position: outside; /* Aligns list text close to the bullet */
-margin-left: 20px; /* Adds indentation from the left */
-padding-left: 0; /* Removes additional default padding from the left */
+list-style-position: outside;
+margin-left: 20px; 
+padding-left: 0;
 text-align: left;
 }
 
 .text ul li {
-margin-left: 10px; /* Slightly indents each list item from the bullet */
+margin-left: 10px;
 }
 
 .text a:link {
@@ -291,28 +292,22 @@ color: beige;
 transition: all 0.5s ease;
 }
 
-.text a:active {
+/* Active link behaviour is not Main content specific but for all the links */
+a:active {
     text-decoration: none;
     font-weight: bold;
-    color: rgb(169, 222, 238);
+    color: rgb(71, 147, 170);
 }
 
+.icon-item:hover, .icon-item:active {
+    background-color: #fa5a5a;
+}
 
-    /* Scroll Button styling */
-    
-    /* Trigger the button to appear after scrolling past the background image */
-    .spacer + .icon-item {
-    opacity: 1;
-    }
+/* Hide the checkbox by default */
+    .menu-toggle-checkbox, .search-toggle-checkbox  {
+        display: none;
+}
 
-    .material-symbols-outlined {
-    font-variation-settings:
-    'FILL' 0,
-    'wght' 400,
-    'GRAD' 0,
-    'opsz' 24
-    }
-    
 
 /* Mobile-specific Content Styling */
 @media (max-width: 600px) {
@@ -329,15 +324,13 @@ transition: all 0.5s ease;
         left: 50%;
         border-style: solid;
         border-color: grey; 
-        border-radius: 10px; /* Adds slight rounding */
-        box-shadow: 0px 4px 8px #4a2727; /* Adds a subtle shadow around the box */
+        border-radius: 10px; 
+        box-shadow: 0px 4px 8px #4a2727;
         border-width: 1px;
         border-radius: 0px;
         width: 100%;
         text-align: center;
     }
-        
-
 
     /* Hide the normal nav-links on mobile */
     .nav-links {
@@ -357,11 +350,7 @@ transition: all 0.5s ease;
         padding: 10px;
     }
 
-    /* Hide the checkbox by default */
-    .menu-toggle-checkbox {
-        display: none;
-    }
-
+    
     /* Show the hamburger icon */
     .menu-toggle {
         display: flex;
@@ -402,6 +391,9 @@ transition: all 0.5s ease;
     /* Initially hide the search bar */
     .search-bar {
         display: none;
+        flex-direction: column;
+        align-items: center;
+        width: 200px;
     }
 
     /* Show the search icon */
@@ -413,7 +405,8 @@ transition: all 0.5s ease;
 
     /* When the checkbox is checked, show the search bar */
     .search-toggle-checkbox:checked + .search-icon + .search-bar {
-        display: block;
+        display: flex;
+        flex-direction: row;
         position: absolute;
         top: 80px;
         right: 20px;
@@ -431,7 +424,8 @@ transition: all 0.5s ease;
         width: 200px;
     }
 
-      footer {
+    /* Mobile Screen Footer */
+    footer {
         display: flex;
         flex-direction: column;
         background-color: #533232;
@@ -462,7 +456,6 @@ transition: all 0.5s ease;
         opacity: 1;
     }
     
-      
     .footer-content {
         display: flex;
         flex-direction: row;
