--- a/styles.css
+++ b/styles.css
@@ -336,9 +336,9 @@ a:active {
     .nav-links {
         display: none;
         position: absolute;
-        top: 60px;
-        right: 20px;
-        background-color: #333;
+        top: 105px;
+        right: 0px;
+        background-color: #4a2727;
         flex-direction: column;
         width: 200px;
         border-radius: 5px;
@@ -391,9 +391,6 @@ a:active {
     /* Initially hide the search bar */
     .search-bar {
         display: none;
-        flex-direction: column;
-        align-items: center;
-        width: 200px;
     }
 
     /* Show the search icon */
@@ -403,18 +400,17 @@ a:active {
         cursor: pointer;
     }
 
-    /* When the checkbox is checked, show the search bar */
-    .search-toggle-checkbox:checked + .search-icon + .search-bar {
+    .search-bar {
         display: flex;
-        flex-direction: row;
-        position: sticky;
+        position: absolute;
         top: 80px;
-        right: 20px;
-        background-color: white;
+        right: 0px;
+        color: white;
+        background-color: #4a2727;
+        flex-direction: column;
+        width: 200px;
         border-radius: 5px;
-        box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.3);
-        padding: 10px;
-        z-index: 1;
+        box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.3);
     }
 
     .search-bar input {
